--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
     </form>
     <ul class="gallery"></ul>
     <div class="loader"></div>
+    <div>
+      <button type="button" class="btn-load">Load more</button>
+    </div>
+    <div class="loader"></div>
     <script src="./main.js" type="module"></script>
   </body>
 </html>
