--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     </form>
     <ul class="gallery"></ul>
     <div class="loader"></div>
-    <div>
+    <div class="btn-loading container">
       <button type="button" class="btn-load">Load more</button>
     </div>
     <div class="loader"></div>
